test/should-fail/变量数组-2.j
function test takes nothing returns nothing
    local integer array i
    set i = 1
endfunction